# ACC_Agent

./: .env.example  .gitignore  README.md  check_llm_factory.py  pyproject.toml  server.py  verify_agents_path.py  verify_context_split.py  verify_memory.py  verify_memory_window.py  verify_paths_simple.py
.agent/rules/: create-and-update-tests-rule.md  environment-rule.md  modification-rule.md
.agent/skills/pull-request-skill/: SKILL.md
agent-settings/common/: AGENTS.md
agent-settings/test_user/: AGENTS.md  SOUL.md  USER.md
specs/: spec.md
src/acc_agent/: core.py  introspection.py  llm_factory.py  memory.py  memory_manager.py  memory_processor.py  schemas.py
static/: index.html  script.js  style.css
